# game_bevy

./: Cargo.toml
assets/Level/: level_one.ldtk
src/: main.rs
src/game_objects/: game_object.rs  mod.rs
src/game_objects/entities/: camera_controller.rs  enemy.rs  entity.rs  mod.rs  player.rs  player_movement.rs
src/game_objects/objects/: mod.rs  prop.rs
src/util/: animation.rs  asset_handling.rs  mod.rs  player_animations.rs
